// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wrapper renders back link if url is given 1`] = `
<div>
  <nav
    data-test="header"
  >
    <button
      aria-label="general.go_back"
      data-test="wrapper-go-back-arrow"
    >
      <svg
        height="15"
        viewBox="0 0 10 15"
        width="10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9 14L1 7.5 9 1"
          fill="none"
          fill-rule="evenodd"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </button>
     
    <div />
     
    <!---->
     
    <!---->
  </nav>
   
  <main
    class=""
  >
     
    <footer
      data-test="footer"
    />
  </main>
</div>
`;

exports[`Wrapper renders close link if url is given 1`] = `
<div>
  <nav
    data-test="header"
  >
    <!---->
     
    <div />
     
    <!---->
     
    <button
      aria-label="general.close"
      class=""
      data-test="close-page"
    >
      <svg
        height="14"
        viewBox="0 0 14 14"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M13.7.3c-.4-.4-1-.4-1.4 0L7 5.6 1.7.3C1.3-.1.7-.1.3.3c-.4.4-.4 1 0 1.4L5.6 7 .3 12.3c-.4.4-.4 1 0 1.4.2.2.4.3.7.3.3 0 .5-.1.7-.3L7 8.4l5.3 5.3c.2.2.5.3.7.3.2 0 .5-.1.7-.3.4-.4.4-1 0-1.4L8.4 7l5.3-5.3c.4-.4.4-1 0-1.4z"
          fill="currentColor"
          fill-rule="nonzero"
        />
      </svg>
    </button>
  </nav>
   
  <main
    class=""
  >
     
    <footer
      data-test="footer"
    />
  </main>
</div>
`;

exports[`Wrapper renders title 1`] = `
<div>
  <nav
    data-test="header"
  >
    <!---->
     
    <div />
     
    <!---->
     
    <!---->
  </nav>
   
  <main
    class=""
  >
    This is a title.
    <div>
      content
    </div>
     
    <footer
      data-test="footer"
    >
      <div>
        footer
      </div>
    </footer>
  </main>
</div>
`;
